--- a/src/styles/lx-shell-grid.css
+++ b/src/styles/lx-shell-grid.css
@@ -18,6 +18,7 @@
   font-size: 2.5rem;
   font-weight: var(--h1-font-weight);
   line-height: 1.1em;
+  margin-bottom: 0.5rem;
 }
 
 /* DEFAULT */
